--- a/JenkinsFile
+++ b/JenkinsFile
@@ -63,13 +63,13 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: 'Git-cred', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
                         bat '''
-                        type deploy.yaml
+                        type deployment.yaml
                         powershell -Command "(Get-Content deployment.yaml).replace('32', '%BUILD_NUMBER%') | Set-Content deployment.yaml"
-                        type deploy.yaml
-                        git add deploy.yaml
+                        type deployment.yaml
+                        git add deployment.yaml
                         git commit -m "Updated the deployment yaml | Jenkins Pipeline"
                         git remote -v
-                        git push https://github.com/Vinayvasantham/Todo-App/tree/main/todoapp-manifests HEAD:main
+                        git push https://github.com/Vinayvasantham/Todo-App/todoapp-manifests HEAD:main
                         '''
                     }
                 }
