--- a/JenkinsFile
+++ b/JenkinsFile
@@ -65,7 +65,7 @@ pipeline {
                         bat '''
                         cd todoapp-manifests
                         type deployment.yaml
-                        powershell -Command "(Get-Content deployment.yaml).replace('32', '%BUILD_NUMBER%') | Set-Content deployment.yaml"
+                        C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe -Command "(Get-Content deployment.yaml).replace('32', '%BUILD_NUMBER%') | Set-Content deployment.yaml"
                         type deployment.yaml
                         git add deployment.yaml
                         git commit -m "Updated the deployment yaml | Jenkins Pipeline"
