--- a/JenkinsFile
+++ b/JenkinsFile
@@ -50,7 +50,7 @@ pipeline {
             steps {
                 script {
                     withCredentials([string(credentialsId: 'GitHub-AuthToken', variable: 'GITHUB_TOKEN')]) {
-                        git url: 'https://github.com/Vinayvasantham/Todo-App.git',
+                        git url: 'https://github.com/Vinayvasantham/cicd-demo-manifest-repo.git',
                             branch: 'main',
                             credentialsId: 'GitHub-AuthToken'
                     }
@@ -72,7 +72,7 @@ pipeline {
                         git add deployment.yaml
                         git commit -m "Updated the deployment yaml | Jenkins Pipeline"
                         git remote -v
-                        git push https://%GIT_USERNAME%:%GIT_PASSWORD%@github.com/Vinayvasantham/Todo-App.git HEAD:main
+                        git push https://github.com/Vinayvasantham/cicd-demo-manifest-repo.git HEAD:main
                         '''
                     }
                 }
