--- a/JenkinsFile
+++ b/JenkinsFile
@@ -72,7 +72,7 @@ pipeline {
                         git add deployment.yaml
                         git commit -m "Updated the deployment yaml | Jenkins Pipeline"
                         git remote -v
-                        git push https://%GIT_USERNAME%:%GIT_PASSWORD%@github.com/Vinayvasantham/cicd-demo-manifest-repo.git HEAD:main
+                        git push https://github.com/Vinayvasantham/cicd-demo-manifest-repo.git HEAD:main
                         '''
                     }
                 }
