--- a/JenkinsFile
+++ b/JenkinsFile
@@ -74,7 +74,8 @@ pipeline {
                 cd todoapp-manifests
                 cd todoapp-manifests
                 type deployment.yaml
-                powershell -Command "(Get-Content deployment.yaml) -replace '32', $Env:IMAGE_TAG | Set-Content deployment.yaml"
+                $newTag = [int]$Env:IMAGE_TAG - 1
+                powershell -Command "(Get-Content deployment.yaml) -replace vinayvasantham/todo-app-cicd:$newTag, vinayvasantham/todo-app-cicd:%BUILD_NUMBER% | Set-Content deployment.yaml"
                 type deployment.yaml
                 git add deployment.yaml
                 git commit -m "Updated the deployment.yaml with build number | Jenkins Pipeline"
