--- a/JenkinsFile
+++ b/JenkinsFile
@@ -76,6 +76,7 @@ pipeline {
                     
                     cd todoapp-manifests
                     cd todoapp-manifests
+                    git pull origin main
                     type deployment.yaml
                     powershell -Command "(Get-Content deployment.yaml) -replace 'vinayvasantham/todo-app-cicd:55', 'vinayvasantham/todo-app-cicd:%BUILD_NUMBER%' | Set-Content deployment.yaml"
                     type deployment.yaml
