--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,13 +10,7 @@ pipeline {
 
         stage('Checkout') {
             steps {
-                script {
-                    withCredentials([string(credentialsId: 'GitHub-AuthToken', variable: 'GITHUB_TOKEN')]) {
-                        git url: 'https://github.com/Vinayvasantham/Todo-App',
-                            branch: 'main',
-                            credentialsId: 'GitHub-AuthToken'
-                    }
-                }
+                git branch: 'main', url: 'https://github.com/Vinayvasantham/CICD-pipeline-for-Node.js-application.git'
             }
         }
 
